--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node.exe node_modules/next/dist/bin/next dev",
-    "build": "next build",
+    "build": "node.exe node_modules/next/dist/bin/next build",
     "start": "next start",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
@@ -27,6 +28,7 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "recharts": "^3.1.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5"
   },
