--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "node.exe node_modules/next/dist/bin/next dev",
-    "build": "node.exe node_modules/next/dist/bin/next build",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "test": "jest",
     "test:watch": "jest --watch",
