--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "zod": "^4.1.5"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.10.2",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -41,7 +42,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "axe-core": "^4.10.3",
     "jest": "^29.7.0",
+    "jest-axe": "^10.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "supabase": "^2.39.2",
     "tailwindcss": "^4",
