--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.1.2",
+    "resend": "^6.1.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5"
   },
