chore: remove unused files and components to streamline project structure
- Deleted obsolete documentation files related to AI CLI reflection and comment system analysis.
- Removed unused components such as CommentForm, CommentItem, and NotificationPreferences to enhance codebase clarity.
- Cleaned up performance monitoring component and various SQL scripts to reduce clutter in the repository.
- Updated package dependencies in package.json and package-lock.json for improved performance and compatibility.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,7 @@
     "jsx": "preserve",
     "types": [
       "react",
-      "react-dom",
-      "node"
+      "react-dom"
     ],
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
